--- a/resources/org/ce/ap/client/pages/style/tweet.css
+++ b/resources/org/ce/ap/client/pages/style/tweet.css
@@ -48,9 +48,8 @@
     -fx-pref-width: 430;
     -fx-max-width: 430;
     -fx-min-width: 430;
-    -fx-pref-height: 50;
+    -fx-min-height: 100;
     -fx-max-height: 100;
-    -fx-min-height: 50;
     -fx-alignment: top-left;
     -fx-font-size: 13;
     -fx-padding: 5 0 0 54;
@@ -127,9 +126,8 @@
     -fx-pref-width: 765;
     -fx-max-width: 765;
     -fx-min-width: 765;
-    -fx-pref-height: 50;
-    -fx-max-height: 100;
-    -fx-min-height: 50;
+    -fx-min-height: 150;
+    -fx-max-height: 150;
     -fx-alignment: top-left;
     -fx-font-size: 13;
     -fx-padding: 5 0 0 54;
